# kavachi-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_STATE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  verify.ps1
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: add_analyst_feedback.py  add_interventions_audit.py  add_telemetry_fields.py  initial_kavach_schema.py
apps/api/kavach_api/: __init__.py  adapters.py  audit.py  auth.py  counterfeit.py  database.py  engine.py  evaluation.py  main.py  policy.py  redaction.py  stt.py
apps/api/kavach_api/events/: __init__.py  bus.py  handlers.py
apps/api/kavach_api/routes/: audit.py  cases.py  counterfeit.py  dev.py  health.py  intelligence.py  ops.py  privacy.py  sessions.py
apps/api/kavach_api/services/: extraction.py  fusion.py  geospatial.py  graph_analytics.py  replay.py
apps/api/scripts/: load_test.py  preflight.ps1
apps/api/tests/: conftest.py  test_api.py  test_counterfeit.py  test_domain_validation.py  test_event_bus.py  test_extraction.py  test_fusion.py  test_geospatial.py  test_graph.py  test_interventions_audits.py  test_risk_engine.py  test_scenarios_e2e.py  test_services.py  test_stream_pipeline.py
apps/web/: middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
data/evaluations/: final_metrics.json
docker/: api.Dockerfile  web.Dockerfile
docs/: API_CONTRACT.md  ARCHITECTURE.md  BUILD_STATE.md  CLEAN_MACHINE_VALIDATION.md  CONTRIBUTING.md  DATASET_CARD_NOTE_PERTURBATIONS.md  DATASET_CARD_SCENARIOS.md  DATA_MODEL.md  DECISIONS.md  DEMO_CHECKLIST.md  DEMO_DATA_POLICY.md  DEMO_SCRIPT.md  ETHICS_AND_LIMITATIONS.md  EVALUATION_PROTOCOL.md  FINAL_COMPLETION_REPORT.md  JUDGE_QA.md  LICENSE  MODEL_CARD_NOTE_SCANNER.md  MODEL_CARD_SCAM_ENGINE.md  OPERATIONS.md  PITCH_DECK_CONTENT.md  PRIVACY.md  PROMPT_COMPLETION_REPORT.md  RELEASE_NOTES.md  SECURITY.md  SYSTEM_DESIGN.md  TEST_REPORT.md  THREAT_MODEL.md  threshold_sweep.json
grafana/dashboards/: kavach_dashboard.json
scripts/: run_evaluations.py
(+19 files in other folders)
